pod-security-cel/baseline/disallow-probes-host/.chainsaw-test/podcontroller-bad.yaml
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
spec:
  schedule: "*/5 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          initContainers:
          - name: busybox-init
            image: ghcr.io/kyverno/test-busybox:1.35
            restartPolicy: Always
            lifecycle:
              preStop:
                tcpSocket:
                  host: 127.0.0.1
                  port: 8080
          containers:
          - name: busybox
            image: ghcr.io/kyverno/test-busybox:1.35
          restartPolicy: Never
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: baddeployment01
  template:
    metadata:
      labels:
        app: baddeployment01
    spec:
      containers:
      - name: busybox
        image: ghcr.io/kyverno/test-busybox:1.35
        readinessProbe:
          httpGet:
            host: 127.0.0.1
            path: /ready
            port: 8080
