pod-security-cel/baseline/disallow-probes-host/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-probes-host
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
